ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-backend-ingress
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - pathType: Prefix
        path: /frontend
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - pathType: Prefix
        path: /backend
        backend:
          service:
            name: backend-service
            port:
              number: 3001
